--- a/html/colores/master.css
+++ b/html/colores/master.css
@@ -7,8 +7,16 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 2em 0;
-} header > section {
-  padding: 0 2em;
+} header > article {
+  padding: 0 4em;
+}
+
+main {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 4em 0;
 }
 
 footer {
@@ -16,4 +24,28 @@ footer {
   text-align: center;
   bottom: 0; left: 0;
   padding: 2em 0;
+  width: 100%;
+  background: #fff;
+}
+
+.cuadrado {
+  width: 200px;
+  height: 200px;
+  margin: 1em;
+  padding: 4em;
+}
+
+.azul {
+  background: lightblue;
+  z-index: 1;
+}
+
+.verde {
+  background: lightgreen;
+  z-index: 3;
+}
+
+.naranja {
+  background: orange;
+  z-index: 2;
 }
