--- a/html/calculadora/master.css
+++ b/html/calculadora/master.css
@@ -1,57 +1,72 @@
 :root {
-  --title: 'Xanh Mono', monospace;
+  --Julius: 'Julius Sans One', sans-serif;
+  --Montserrat: 'Montserrat', sans-serif;
+  --Dancing: 'Dancing Script', cursive;
+  --Rock: 'Rock Salt', cursive;
+
+  --lightorange: #ffc87c;
+  --darkorange: #ff7327;
 }
 
 * {
-  font-family: Arial;
-  cursor: default;
-  margin: 0; padding: 0;
+  padding: 0; margin: 0;
 }
 
-header, footer {
-  text-align: center;
+a {
+  color: inherit;
+  text-decoration: none;
+  font-family: var(--Montserrat);
+  transition: color 0.3s;
+} a:hover {
+  color: orange;
 }
 
 header {
   display: flex;
   justify-content: space-between;
-  padding: 4em 0;
+  background: #fff;
+  padding: 2em 0;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
 } #title {
   color: coral;
   font-weight: bold;
-  font-family: var(--title);
+  font-family: var(--Julius);
   padding-right: 4em;
 } header > article {
   padding: 0 4em;
 }
 
+#sections {
+  padding: 0 2em;
+} #sections > a {
+  padding: 0 1em;
+}
+
 footer {
+  text-align: center;
+  color: #fff;
   position: fixed;
   background: coral;
-  padding: 2em 0;
   bottom: 0; left: 0;
+  padding: 2em 0;
   width: 100%;
-} #author {
-  color: white;
 }
 
 main {
   display: flex;
   justify-content: space-around;
-  padding: 2em 0;
-}
-
-a {
-  color: orange;
-  cursor: pointer;
-  text-decoration: none;
-  border: 2px solid orange;
-  border-radius: 50%;
-  padding: 0.2em 0.5em;
+  padding: 4em 0; margin: 4em 0;
 }
 
 i {
   cursor: pointer;
+}
+
+.author {
+  font-family: var(--Julius);
+
 }
 
 /*************
@@ -100,7 +115,7 @@ i {
   font-weight: bold;
   color: coral;
   transition: transform 0.4s;
-  height: 100%;
+  margin: 1em 0;
 } #symbols > button:hover {
   transform: scale(2);
 }
@@ -116,7 +131,7 @@ i {
   border: none;
   color: coral;
   transition: transform 0.5s;
-  height: 100%;
+  margin: 1em 0;
 } #calculate > button:hover {
   transform: scale(2);
 }
@@ -125,4 +140,477 @@ button {
   cursor: pointer;
   background: inherit;
   padding: 1em;
+}
+
+/*
+1ra sección: :root
+2da sección: *
+3ra sección: IDs
+4ta sección: clases
+5ta sección: tags
+*/
+
+:root {
+  --Julius: 'Julius Sans One', sans-serif;
+  --Montserrat: 'Montserrat', sans-serif;
+  --Dancing: 'Dancing Script', cursive;
+  --Rock: 'Rock Salt', cursive;
+  --Roboto: 'Roboto', sans-serif;
+
+  --lightorange: #ffc87c;
+  --darkorange: #ff7327;
+}
+
+* {
+  padding: 0; margin: 0;
+}
+
+#menu {
+  display: none;
+} #sections {
+  padding: 0 2em;
+} #sections > a {
+  padding: 0 1em;
+} #sections > button {
+  display: none;
+}
+
+#about_me {
+  background: url('/mmedia/images/mountains.jpg') no-repeat center/cover;
+  display: flex;
+  flex-direction: column;
+  margin-top: 4em;
+  margin-bottom: 2em;
+} #about_me > section {
+  padding: 4em 0;
+} #about_me > section > button, #subscribe, #login {
+  cursor: pointer;
+  background: orange;
+  border: none;
+  transition: background 0.5s;
+  color: #fff;
+  padding: 1em 2em;
+  font-size: 15px;
+} #about_me > section > button:hover, #subscribe:hover, #login:hover {
+  background: var(--darkorange);
+}
+
+#aboutMe {
+  font-family: arial;
+  text-align: justify;
+  color: white;
+  background: rgb(0, 0, 0, 0.2);
+  border: 3px solid #fff;
+  border-radius: 10px;
+  text-indent: 2em;
+  font-size: 18px;
+  padding: 4em;
+  padding-bottom: 0;
+  margin: 1em 10% 0 10%;
+  width: 80%;
+} #aboutMe > p {
+  padding: 1em 4em;
+} #aboutMe > div {
+  padding: 0 2em 3em 2em;
+} #aboutMe > div > h2 {
+  color: #eee;
+  border-bottom: 3px solid orange;
+  padding-bottom: 0.5em;
+  margin: 0 1em;
+  font-size: 30px;
+} #aboutMe > div > ul {
+  text-align: center;
+  padding: 1.5em 1em 0 1em;
+} #aboutMe > div > ul > li {
+  color: #eee;
+  padding-bottom: 0.5em;
+  font-size: 20px;
+  text-indent: 0;
+} #aboutMe > div > p {
+  text-align: justify;
+  color: #eee;
+  text-indent: 1em;
+  font-size: 20px;
+  padding: 1.5em 1em 0 1em;
+}
+
+#hideAboutMe {
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+} #hide_knowMore {
+  background: var(--darkorange);
+  cursor: pointer;
+  border: none;
+  border-radius: 45px;
+  color: #fff;
+  padding: 1em;
+}
+
+#my_habilities, #my_virtues {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} #my_habilities > section, #my_virtues > section {
+  display: flex;
+  justify-content: space-between;
+} #my_habilities > section > h2, #my_virtues > section > h2 {
+  font-family: var(--Montserrat);
+  padding: 0.5em 2em 1em 2em;
+} #my_habilities > section > div, #my_virtues > section > div {
+  font-family: var(--Montserrat);
+  text-align: center;
+  padding: 1em 2em 0 2em;
+  width: 33.3%;
+} #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
+  padding: 1em 0;
+} #my_virtues > section > div > p, #my_habilities > section > div > p  {
+  text-align: justify;
+  text-indent: 2em;
+  padding: 0.5em 0;
+} {
+  padding: 0.5em 0;
+}
+
+#formulary {
+  background: url('/mmedia/images/mountains.jpg') no-repeat center/cover;
+  display: flex;
+  justify-content: space-around;
+} #formulary > article > form > fieldset {
+  display: flex;
+  flex-direction: column;
+  border: 10px solid orange;
+  border-style: none none none solid;
+  background: rgba(150, 150, 150, 0.1);
+  border-radius: 5px;
+  padding: 4em;
+  margin: 4em 2em;
+} #formulary > article > form > fieldset > input {
+  text-align: center;
+  padding: 1em 0;
+  margin: 1em 0;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+} #formulary_info {
+  text-align: justify;
+  color: #eee;
+  text-indent: 2em;
+  padding: 4em; margin: 4em 2em;
+  border-radius: 10px;
+  background: rgba(150, 150, 150, 0.1);
+  font-size: 20px;
+}
+
+#author {
+  padding: 0 4em;
+}
+
+#user_options {
+  background: url('/mmedia/images/mountains.jpg') no-repeat center/cover;
+} #user_options > article > h2 {
+  font-family: var(--Montserrat);
+  color: white;
+  padding-top: 2em;
+}
+
+
+.logo, .logo-head {
+  font-family: var(--Dancing);
+  padding: 0 4em;
+}
+
+.logo-head {
+  display: none
+}
+
+.author {
+  font-family: var(--Julius);
+  padding: 0 4em;
+}
+
+.lightgreen {
+  border-top: 10px solid lightgreen;
+}
+
+.lightblue {
+  border-top: 10px solid lightblue;
+}
+
+.orange {
+  border-top: 10px solid orange;
+}
+
+.color-white {
+  font-family: arial;
+  color: white;
+  padding: 0 1em;
+}
+
+.transition {
+  transition: 1s;
+}
+
+.hidden {
+  display: none;
+}
+
+.error {
+  font-family: var(--Montserrat);
+  text-align: center;
+  border: 1px solid red;
+  font-size: 14px;
+  background: #ff9999;
+  padding: 1em;
+}
+
+.cursive {
+  font-style: italic;
+}
+
+main {
+  padding: 4em 0;
+} main > article {
+  text-align: center;
+  padding: 4em;
+}
+
+header, footer {
+  display: flex;
+  justify-content: space-between;
+  background: #fff;
+  padding: 2em 0;
+} header {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  font-family: var(--Montserrat);
+  transition: color 0.3s;
+} a:hover {
+  color: orange;
+}
+
+p, ul, button {
+  font-family: var(--Roboto);
+}
+
+i {
+  font-size: 25px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media only screen
+and (max-device-width: 850px) {
+
+  .author {
+    font-size: 30px;
+  }
+
+  .logo-head {
+    display: block;
+    padding: 1em 4em;
+  }
+
+  #navigator {
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    max-width: 40%;
+  } #sections {
+    position: fixed;
+    display: none;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 4em 0; margin: 0;
+    top: 0; left: 0;
+    height: 100%; width: 100%;
+    z-index: 100;
+  } #sections > button > i {
+    color: #fff;
+  } #sections > a, #sections > button {
+    font-weight: bold;
+    display: block;
+    color: white;
+    transition: color 0.5s;
+    padding: 2em 0;
+    width: 100%;
+  } #sections > button {
+    text-align: right;
+    padding: 2em 4em;
+    background: none;
+    border: none;
+  } #sections > a:hover {
+    color: orange;
+  } #menu {
+    display: block;
+    padding: 0 4em;
+  } #menu > button {
+    background: inherit;
+    cursor: pointer;
+    border: none;
+    transition: transform 0.5s, color 0.4s;
+    padding: 1em;
+  } #menu > button:hover {
+    transform: scale(1.3);
+    color: orange;
+  }
+
+  #aboutMe {
+    background: rgba(0, 0, 0, 0.2);
+    margin: 0 5%;
+    padding: 1em;
+    width: 90%;
+  } #aboutMe > div {
+    padding: 1em; margin: 0;
+  } #aboutMe > div > ul {
+    padding: 1em;
+  } #aboutMe > div > ul > li {
+    text-indent: 0;
+  }
+
+  #my_habilities {
+    padding-bottom: 0;
+  } #my_habilities > section, #my_virtues > section {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 4em;
+  } #my_habilities > section > h2, #my_virtues > section > h2 {
+    padding: 4em 0;
+  } #my_habilities > section > div, #my_virtues > section > div {
+    padding: 4em 0;
+    width: 100%;
+    margin: 1em 0;
+  } #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
+    color: #fff;
+    padding: 1em 0 2em 0;
+    font-size: 50px;
+  } #my_habilities > section > div > p, #my_virtues > section > div > p {
+    text-align: center;
+    color: #eee;
+    font-size: 30px;
+    text-indent: 0;
+    padding: 0.5em 4em;
+  }
+
+  #formulary {
+    display: flex;
+    flex-direction: column;
+  } #formulary_info {
+    margin: 2em;
+  }
+
+  .lightblue {
+    background: lightblue;
+  } .lightgreen {
+    background: lightgreen;
+  } .orange {
+    background: orange;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  } header > article {
+    text-align: center;
+    padding: 1em;
+  }
+}
+
+@media only screen and (max-width: 850px)
+{
+  #navigator {
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    max-width: 40%;
+  } #sections {
+    display: none;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.6);
+    top: 0; left: 0;
+    height: 100%; width: 100%;
+    z-index: 100;
+  } #sections > div > button > i {
+    color: #fff;
+  } #sections > a {
+    display: block;
+    color: white;
+    font-weight: bold;
+    transition: color 0.5s;
+    padding: 2em 0 1em 0;
+  } #sections > a:hover {
+    color: orange;
+  } #menu {
+    display: block;
+    padding: 0 2em;
+  } #menu > button {
+    background: inherit;
+    cursor: pointer;
+    border: none;
+    transition: transform 0.5s, color 0.4s;
+    padding: 1em;
+  } #menu > button:hover {
+    transform: scale(1.3);
+    color: orange;
+  }
+
+  #aboutMe {
+    background: rgba(0, 0, 0, 0.2);
+    margin: 0 5%;
+    padding: 1em;
+    width: 90%;
+  } #aboutMe > div {
+    padding: 1em; margin: 0;
+  } #aboutMe > div > ul {
+    padding: 1em;
+  } #aboutMe > div > ul > li {
+    text-indent: 0;
+  }
+
+  #my_habilities {
+    padding-bottom: 0;
+  } #my_habilities > section, #my_virtues > section {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 4em;
+  } #my_habilities > section > div, #my_virtues > section > div {
+    padding: 4em 0;
+    width: 100%;
+    margin: 1em 0;
+  } #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
+    padding: 1em 0 2em 0;
+  } #my_habilities > section > div > p, #my_virtues > section > div > p {
+    text-align: center;
+    text-indent: 0;
+    padding: 0.5em 4em;
+  }
+
+  #formulary {
+    display: flex;
+    flex-direction: column;
+  } #formulary_info {
+    margin: 2em;
+  }
+
+  .lightblue {
+    background: lightblue;
+  } .lightgreen {
+    background: lightgreen;
+  } .orange {
+    background: orange;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  } header > article {
+    text-align: center;
+    padding: 1em;
+  }
 }
