--- a/includes/css/master.css
+++ b/includes/css/master.css
@@ -11,6 +11,7 @@
   --Montserrat: 'Montserrat', sans-serif;
   --Dancing: 'Dancing Script', cursive;
   --Rock: 'Rock Salt', cursive;
+  --Roboto: 'Roboto', sans-serif;
 
   --lightorange: #ffc87c;
   --darkorange: #ff7327;
@@ -18,6 +19,16 @@
 
 * {
   padding: 0; margin: 0;
+}
+
+#menu {
+  display: none;
+} #sections {
+  padding: 0 2em;
+} #sections > a {
+  padding: 0 1em;
+} #sections > button {
+  display: none;
 }
 
 #about_me {
@@ -28,15 +39,15 @@
   margin-bottom: 2em;
 } #about_me > section {
   padding: 4em 0;
-} #about_me > section > button, #subscribe {
-  color: #fff;
+} #about_me > section > button, #subscribe, #login {
   cursor: pointer;
   background: orange;
   border: none;
   transition: background 0.5s;
+  color: #fff;
   padding: 1em 2em;
   font-size: 15px;
-} #about_me > section > button:hover, #subscribe:hover {
+} #about_me > section > button:hover, #subscribe:hover, #login:hover {
   background: var(--darkorange);
 }
 
@@ -44,16 +55,52 @@
   font-family: arial;
   text-align: justify;
   color: white;
-  background: rgb(255, 255, 255, 0.1);
+  background: rgb(0, 0, 0, 0.2);
   border: 3px solid #fff;
   border-radius: 10px;
   text-indent: 2em;
   font-size: 18px;
   padding: 4em;
-  margin: 1em 25%;
-  width: 50%;
+  padding-bottom: 0;
+  margin: 1em 10% 0 10%;
+  width: 80%;
 } #aboutMe > p {
   padding: 1em 4em;
+} #aboutMe > div {
+  padding: 0 2em 3em 2em;
+} #aboutMe > div > h2 {
+  color: #eee;
+  border-bottom: 3px solid orange;
+  padding-bottom: 0.5em;
+  margin: 0 1em;
+  font-size: 30px;
+} #aboutMe > div > ul {
+  text-align: center;
+  padding: 1.5em 1em 0 1em;
+} #aboutMe > div > ul > li {
+  color: #eee;
+  padding-bottom: 0.5em;
+  font-size: 20px;
+  text-indent: 0;
+} #aboutMe > div > p {
+  text-align: justify;
+  color: #eee;
+  text-indent: 1em;
+  font-size: 20px;
+  padding: 1.5em 1em 0 1em;
+}
+
+#hideAboutMe {
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+} #hide_knowMore {
+  background: var(--darkorange);
+  cursor: pointer;
+  border: none;
+  border-radius: 45px;
+  color: #fff;
+  padding: 1em;
 }
 
 #my_habilities, #my_virtues {
@@ -65,54 +112,71 @@
   justify-content: space-between;
 } #my_habilities > section > h2, #my_virtues > section > h2 {
   font-family: var(--Montserrat);
-  padding: 1em 2em;
+  padding: 0.5em 2em 1em 2em;
 } #my_habilities > section > div, #my_virtues > section > div {
   font-family: var(--Montserrat);
   text-align: center;
-  padding: 1em 2em;
+  padding: 1em 2em 0 2em;
   width: 33.3%;
 } #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
   padding: 1em 0;
-} #my_virtues > section > div > p {
+} #my_virtues > section > div > p, #my_habilities > section > div > p  {
   text-align: justify;
   text-indent: 2em;
-  padding-bottom: 1em;
+  padding: 0.5em 0;
+} {
+  padding: 0.5em 0;
 }
 
 #formulary {
   background: url('/mmedia/images/mountains.jpg') no-repeat center/cover;
-} #formulary > article > form {
-  width: 50%;
+  display: flex;
+  justify-content: space-around;
 } #formulary > article > form > fieldset {
   display: flex;
   flex-direction: column;
   border: 10px solid orange;
   border-style: none none none solid;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(150, 150, 150, 0.1);
   border-radius: 5px;
   padding: 4em;
-  margin: 4em;
+  margin: 4em 2em;
 } #formulary > article > form > fieldset > input {
   text-align: center;
   padding: 1em 0;
   margin: 1em 0;
   border: 1px solid lightgray;
   border-radius: 10px;
-}
-
-#sections {
-  padding: 0 2em;
-} #sections > a {
-  padding: 0 1em;
+} #formulary_info {
+  text-align: justify;
+  color: #eee;
+  text-indent: 2em;
+  padding: 4em; margin: 4em 2em;
+  border-radius: 10px;
+  background: rgba(150, 150, 150, 0.1);
+  font-size: 20px;
 }
 
 #author {
   padding: 0 4em;
 }
 
-.logo {
+#user_options {
+  background: url('/mmedia/images/mountains.jpg') no-repeat center/cover;
+} #user_options > article > h2 {
+  font-family: var(--Montserrat);
+  color: white;
+  padding-top: 2em;
+}
+
+
+.logo, .logo-head {
   font-family: var(--Dancing);
   padding: 0 4em;
+}
+
+.logo-head {
+  display: none
 }
 
 .author {
@@ -130,6 +194,12 @@
 
 .orange {
   border-top: 10px solid orange;
+}
+
+.color-white {
+  font-family: arial;
+  color: white;
+  padding: 0 1em;
 }
 
 .transition {
@@ -175,8 +245,266 @@ a {
   color: inherit;
   text-decoration: none;
   font-family: var(--Montserrat);
+  transition: color 0.3s;
+} a:hover {
+  color: orange;
+}
+
+p, ul, button {
+  font-family: var(--Roboto);
 }
 
 i {
   font-size: 25px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media only screen
+and (max-device-width: 850px) {
+
+  .author {
+    font-size: 30px;
+  }
+
+  .logo-head {
+    display: block;
+    padding: 1em 4em;
+  }
+
+  #navigator {
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    max-width: 40%;
+  } #sections {
+    position: fixed;
+    display: none;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 2em 0; margin: 0;
+    top: 0; left: 0;
+    height: 100%; width: 100%;
+    z-index: 100;
+  } #sections > button > i {
+    color: #fff;
+  } #sections > a, #sections > button {
+    font-weight: bold;
+    display: block;
+    color: white;
+    transition: color 0.5s;
+    padding: 2em 0;
+    width: 100%;
+    font-size: 50px;
+  } #sections > a:hover {
+    color: orange;
+  } #sections > button {
+    text-align: right;
+    padding: 1em 4em;
+    background: none;
+    border: none;
+    font-size: 30px;
+  } #menu {
+    display: block;
+    padding: 0 4em;
+  } #menu > button {
+    background: inherit;
+    cursor: pointer;
+    border: none;
+    transition: transform 0.5s, color 0.4s;
+    padding: 1em;
+  } #menu > button:hover {
+    transform: scale(1.3);
+    color: orange;
+  }
+
+  #aboutMe {
+    background: rgba(0, 0, 0, 0.2);
+    margin: 0 5%;
+    padding: 1em;
+    width: 90%;
+  } #aboutMe > div {
+    padding: 1em; margin: 0;
+  } #aboutMe > div > ul {
+    padding: 1em;
+  } #aboutMe > div > ul > li {
+    text-indent: 0;
+  }
+
+  #my_habilities {
+    padding-bottom: 0;
+  } #my_habilities > section, #my_virtues > section {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 4em;
+  } #my_habilities > section > h2, #my_virtues > section > h2 {
+    padding: 4em 0;
+  } #my_habilities > section > div, #my_virtues > section > div {
+    padding: 4em 0;
+    width: 100%;
+    margin: 1em 0;
+  } #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
+    color: #fff;
+    padding: 1em 0 2em 0;
+    font-size: 50px;
+  } #my_habilities > section > div > p, #my_virtues > section > div > p {
+    text-align: center;
+    color: #eee;
+    font-size: 30px;
+    text-indent: 0;
+    padding: 0.5em 4em;
+  }
+
+  #formulary {
+    display: flex;
+    flex-direction: column;
+  } #formulary_info {
+    margin: 2em;
+  } #subscribe, #login, #about_me > section > #knowMore {
+    font-size: 30px;
+  } #formulary > article > form > fieldset > input {
+    padding: 1em;
+    font-size: 25px;
+  }
+
+  .lightblue {
+    background: lightblue;
+  } .lightgreen {
+    background: lightgreen;
+  } .orange {
+    background: orange;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  } header > article {
+    text-align: center;
+    padding: 1em;
+  }
+}
+
+@media only screen and (max-width: 850px)
+{
+  .author {
+    font-size: 15px;
+    padding: 1em 0;
+  }
+
+  .logo-head {
+    display: block;
+    padding: 1em 0 1em 4em;
+    font-size: 13px;
+  }
+
+  #navigator {
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    max-width: 40%;
+  } #sections {
+    position: fixed;
+    display: none;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 4em 0; margin: 0;
+    top: 0; left: 0;
+    height: 100%; width: 100%;
+    z-index: 100;
+  } #sections > button > i {
+    color: #fff;
+  } #sections > a, #sections > button {
+    font-weight: bold;
+    display: block;
+    color: white;
+    transition: color 0.5s;
+    padding: 2em 0;
+    width: 100%;
+    font-size: 18px;
+  } #sections > a:hover {
+    color: orange;
+  } #sections > button {
+    text-align: right;
+    padding: 2em 4em;
+    background: none;
+    border: none;
+    cursor: pointer;
+  } #menu {
+    display: block;
+    padding: 0 3em 0 0;
+  } #menu > button {
+    background: inherit;
+    cursor: pointer;
+    border: none;
+    transition: transform 0.5s, color 0.4s;
+    padding: 1em;
+  } #menu > button:hover {
+    transform: scale(1.3);
+    color: orange;
+  }
+
+  #aboutMe {
+    background: rgba(0, 0, 0, 0.2);
+    margin: 0 5%;
+    padding: 1em;
+    width: 90%;
+  } #aboutMe > div {
+    padding: 1em; margin: 0;
+  } #aboutMe > div > ul {
+    padding: 1em;
+  } #aboutMe > div > ul > li {
+    text-indent: 0;
+  }
+
+  #my_habilities {
+    padding-bottom: 0;
+  } #my_habilities > section, #my_virtues > section {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2em;
+  } #my_habilities > section > h2, #my_virtues > section > h2 {
+    padding: 2em 0;
+  } #my_habilities > section > div, #my_virtues > section > div {
+    padding: 2em 0;
+    width: 100%;
+    margin: 1em 0;
+  } #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
+    color: #fff;
+    padding: 1em 0 2em 0;
+    font-size: 20px;
+  } #my_habilities > section > div > p, #my_virtues > section > div > p {
+    text-align: center;
+    color: #eee;
+    font-size: 18px;
+    text-indent: 0;
+    padding: 0.5em 4em;
+  }
+
+  #formulary {
+    display: flex;
+    flex-direction: column;
+  } #formulary_info {
+    margin: 2em;
+  } #subscribe, #login, #about_me > section > #knowMore {
+    font-size: 20px;
+  } #formulary > article > form > fieldset > input {
+    padding: 1em;
+    font-size: 25px;
+  }
+
+  .lightblue {
+    background: lightblue;
+  } .lightgreen {
+    background: lightgreen;
+  } .orange {
+    background: orange;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  } header > article {
+    text-align: center;
+    padding: 1em;
+  }
 }
