--- a/includes/css/master.css
+++ b/includes/css/master.css
@@ -121,8 +121,8 @@
 } #my_habilities > section > div > h2, #my_virtues > section > div > h2 {
   padding: 1em 0;
 } #my_virtues > section > div > p, #my_habilities > section > div > p  {
-  text-align: justify;
-  text-indent: 2em;
+  /*text-align: justify;
+  text-indent: 2em;*/
   padding: 0.5em 0;
 } {
   padding: 0.5em 0;
@@ -148,13 +148,12 @@
   border: 1px solid lightgray;
   border-radius: 10px;
 } #formulary_info {
-  text-align: justify;
-  color: #eee;
-  text-indent: 2em;
-  padding: 4em; margin: 4em 2em;
+  text-align: center;
+  color: #fff;
+  padding: 4em; margin: 4em;
   border-radius: 10px;
-  background: rgba(150, 150, 150, 0.1);
-  font-size: 20px;
+  background: rgba(255, 150, 0, 0.7);
+  font-size: 25px;
 }
 
 #author {
@@ -166,7 +165,8 @@
 } #user_options > article > h2 {
   font-family: var(--Montserrat);
   color: white;
-  padding-top: 2em;
+  padding: 1em 0;
+  margin-top: 2em;
 }
 
 
@@ -182,6 +182,8 @@
 .author {
   font-family: var(--Julius);
   padding: 0 4em;
+} .author > p {
+  font-family: var(--Julius);
 }
 
 .lightgreen {
@@ -200,6 +202,12 @@
   font-family: arial;
   color: white;
   padding: 0 1em;
+}
+
+.orange-background {
+  background: orange;
+  border: 1px solid orange;
+  border-radius: 10px;
 }
 
 .transition {
