--- a/includes/css/master.css
+++ b/includes/css/master.css
@@ -39,7 +39,7 @@
   margin-bottom: 2em;
 } #about_me > section {
   padding: 4em 0;
-} #about_me > section > button, #subscribe, #login {
+} #about_me > section > button, #subscribe, #login, #logout {
   cursor: pointer;
   background: orange;
   border: none;
@@ -47,7 +47,7 @@
   color: #fff;
   padding: 1em 2em;
   font-size: 15px;
-} #about_me > section > button:hover, #subscribe:hover, #login:hover {
+} #about_me > section > button:hover, #subscribe:hover, #login:hover, #logout:hover {
   background: var(--darkorange);
 }
 
@@ -162,11 +162,19 @@
 
 #user_options {
   background: url('/mmedia/images/mountains.jpg') no-repeat center/cover;
-} #user_options > article > h2 {
+} #user_options > article > h2, #user_options > article > h3 {
   font-family: var(--Montserrat);
   color: white;
   padding: 1em 0;
   margin-top: 2em;
+  border-left: 10px solid orange;
+  background: rgba(0, 0, 0, 0.5);
+} #user_options > article > h3 {
+  border: 0; background: 0; margin-top: 0;
+}
+
+#logout-container {
+  margin-top: 4em;
 }
 
 
@@ -202,12 +210,6 @@
   font-family: arial;
   color: white;
   padding: 0 1em;
-}
-
-.orange-background {
-  background: orange;
-  border: 1px solid orange;
-  border-radius: 10px;
 }
 
 .transition {
